crates/guicons-core/src/snapshots/guicons_core__parse__tests__defaults_merge_root_and_roots.snap
---
source: crates/guicons-core/src/parse.rs
expression: defaults
---
ManifestDefaults {
    roots: [
        "/workspace/a",
        "/workspace/b",
        "/workspace/c",
    ],
    declared_roots: [
        "/workspace/a",
        "/workspace/b",
        "/workspace/c",
    ],
    provider: None,
    size: None,
    paint: None,
}
